--- a/index.html
+++ b/index.html
@@ -6,6 +6,80 @@
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main>
+      <article>
+        <div class="page" style="border-color: midnightblue;">
+          <div class="stackable grid">
+            <div class="row">
+              <div class="three wide center aligned column">
+                <div class="avatar-wrapper">
+                  <object class="avatar" data="./assets/images/avatar.svg" role="img" aria-label="My profile picture"></object>
+                </div>
+              </div>
+              <div class="thirteen wide column">
+                <div class="stackable grid">
+                  <div class="sixteen wide column">
+                    <h1 class="name">Vasyl Arkhipov</h1>
+                    <div class="job">King of deadlines</div>  
+                    <ul class="contacts">
+                        <li>
+                          <a href="https://www.instagram.com/_.bomb4._/?hl=ru">instagram</a>
+                        </li>
+                        <li>
+                          <a href="https://twitter.com/Bomb16284689">twitter</a>
+                        </li>
+                        <li>
+                          <div>Mail: vbitseps02@gmail.com</div>
+                        </li>
+                    </ul>
+                  </div>
+                  <div class="sixteen wide mobile only column">
+                    <div class="divider"></div>
+                  </div>
+                  <div class="sixteen wide column">
+                      <h2>You already know who it is, this is a boy king of deadlines! Even the Chinese will envy my punctuality. I'm ready to work all summer!!</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="sixteen wide column">
+                <div class="fat divider"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="ten wide column">
+                <h3>EXPIRIENCE AND PERSONAL LIFE</h3>
+                <ul class="timeline">
+                  <li>
+                    <p><small>2008</small></p>
+                    <p>Entered the school</p>
+                  </li>
+                  <li>
+                    <p><small>2010</small></p>
+                    <p>Won his first karate championship</p>
+                  </li>
+                  <li>
+                    <p><small>2019</small></p>
+                    <p>Passed the exams and entered to Lviv Polytechnic National University</p>
+                  </li> 
+                  <li>
+                    <p><small>2021</small></p>
+                    <p>Began to study Java on his own</p>
+                  </li> 
+                  <li>
+                    <p><small>2021</small></p>
+                    <p>Passed the introductory text to Binary Studio Academy 2021</p>
+                  </li> 
+                </ul>
+              </div>
+              <div class="six wide column">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
